# ragjudge

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
ragjudge/: __init__.py  cli.py  evaluate.py  judge.py  metrics.py
test/: test_smoke.py
